--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,12 @@
+@misc{EuropeanCommission2017,
+author = {{European Commission}},
+mendeley-groups = {ComSys Seminar},
+pages = {Article 17},
+title = {{General Data Protection Regulation (GDPR)}},
+url = {https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679{\&}from=EN{\#}d1e2589-1-1},
+urldate = {2019-04-10},
+year = {2017}
+}	
 @article{DorriSteger2017,
 abstract = {Future smart vehicles will be part of the Internet of Things to offer beneficial development opportunities for both end users as well as the automotive industry. This will potentially expose smart vehicles to a range of security and privacy threats such as tracking or hijacking a vehicle while driving. A comprehensive security architecture for automotive systems is required to allow the development of new services while protecting the vehicles from attacks and ensuring the privacy of the end users. In this paper we argue that BlockChain (BC), a disruptive technology that has found many applications from cryptocurrency to smart contracts, is a potential solution to automotive security and privacy challenges. We propose a BC-based architecture to protect the privacy of the users and to increase the security of the vehicular eco-system. Wireless remote software updates and other emerging services in the automotive world such as dynamic vehicle insurance fees, are used to illustrate the utilization of the proposed security architecture. We also provide discussions on the security of the architecture against important attacks.},
 archivePrefix = {arXiv},
